# arch-mirrors

./: Cargo.toml  README.md
examples/: get_all_mirrors.rs  mirrorlist_generator.rs
src/: country.rs  lib.rs  macros.rs  protocol.rs  status.rs  url.rs  utils.rs
