[package]
name = "arch-mirrors"
version = "0.1.0"
authors = ["ALinuxPerson <alinuxperson@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Parse the Arch Linux mirror status."
homepage = "https://github.com/ALinuxPerson/arch-mirrors/"
repository = "https://github.com/ALinuxPerson/arch-mirrors/"
readme = "README.md"
keywords = ["arch-linux", "linux", "mirrors", "mirror", "mirrorlist"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
quick-error = "2.0.1"
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
url = { version = "2.2.2", features = ["serde"] }
